# torch-profiler-parser

./: .gitignore  LICENSE  README.md  compare_analysis.py  compare_tabs_analysis.py  evaluate_module_parsing.py  kernel_projection.py  model_inspector.py  profile.md  pyproject.toml  trace-analyzer.md  trace_analyzer.py  trace_module_analyzer.py  visualize_module_tree.py
tests/: README.md  generate_baselines.py  test_classifier_unit.py  test_layer_detector_unit.py
tests/baselines/: grok2.json  qwen3_coder_next.json
