[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-profiler-parser"
version = "0.1.0"
description = "Tools for parsing and analyzing PyTorch Profiler traces with nn.Module correlation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "jacky.cheng" },
]
keywords = ["pytorch", "profiler", "gpu", "trace", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
]
dependencies = [
    "openpyxl",
]

[project.urls]
Homepage = "https://github.com/yichiche/torch-profiler-parser"

[tool.setuptools]
py-modules = [
    "trace_module_analyzer",
    "evaluate_module_parsing",
    "model_inspector",
    "fix_rocm_trace_flow",
]
